--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,11 @@ repos:
     hooks:
       - id: black
         args: [--line-length=100]
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.0.272
     hooks:
