--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ requires = ["setuptools", "wheel", "cython"]
 [tool.black]
 line-length = 100
 
+[tool.isort]
+profile = "black"
+
 [tool.ruff]
 line-length = 100
 target-version = "py37"
