--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-buster
+FROM docker.io/library/python:3.11-slim-bullseye
 
 RUN apt-get update && \
     apt-get install -y git && \
