--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,7 +1,7 @@
 FROM docker.io/library/python:3.11-slim-bullseye
 
 RUN addgroup --system nonroot \
-    && adduser --system nonroot -G nonroot
+    && adduser --system nonroot --ingroup nonroot
 USER nonroot
 
 RUN apt-get update && \
