--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,8 +1,9 @@
 FROM docker.io/library/python:3.11-slim-bullseye
 
-RUN apt-get update && \
-    apt-get install -y git && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends git \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 WORKDIR /app
 
