--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,7 +1,7 @@
 FROM docker.io/library/python:3.11-slim-bullseye
 
 RUN addgroup --system nonroot \
-    && adduser -S nonroot --group nonroot
+    && adduser --system nonroot --group nonroot
 
 USER nonroot
 
