--- a/.github/workflows/build_cli_image_on_push.yml
+++ b/.github/workflows/build_cli_image_on_push.yml
@@ -1,4 +1,4 @@
-name: Build and publish cli image on push or new release event
+name: Build and Publish CLI Image
 
 on:
   push:
@@ -13,11 +13,12 @@ jobs:
       - name: Check out git repository
         uses: actions/checkout@v3
 
-      - name: Extract branch name and remove illegal chars
-        id: get_branch_name
+      - name: Prepare Branch Name
+        id: prepare_branch_name
         shell: bash
         run: |
           if [[ "${{ github.event_name }}" == "push" ]]; then
+            # Replace slashes with hyphens in the branch name
             echo "branch=$(tr "/" "-" <<<${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
           fi
 
@@ -27,8 +28,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Get the release version
-        id: get_version
+      - name: Get Release Version
+        id: get_release_version
         shell: bash
         run: |
           if [[ "${{ github.event_name }}" == "release" ]]; then
@@ -36,22 +37,22 @@ jobs:
             echo "::set-output name=version::$VERSION"
           fi
 
-      - name: Set tag names
-        id: set_tag
+      - name: Prepare Docker Tags
+        id: prepare_docker_tags
         shell: bash
         run: |
           if [[ "${{ github.event_name }}" == "release" ]]; then
-            echo "::set-output name=tags::clinicalgenomics/cg-cli:${{ steps.get_version.outputs.version }},clinicalgenomics/cg-cli:latest"
+            echo "::set-output name=tags::clinicalgenomics/cg-cli:${{ steps.get_release_version.outputs.version }},clinicalgenomics/cg-cli:latest"
           else
             BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr "/" "-")
             echo "::set-output name=tags::clinicalgenomics/cg-cli:$BRANCH_NAME"
           fi
 
-      - name: Build and push
+      - name: Build and Push Docker Image
         id: docker_cli_build
         uses: docker/build-push-action@v3
         with:
           context: ./
           file: ./Dockerfile.cli
           push: true
-          tags: ${{ steps.set_tag.outputs.tags }}
+          tags: ${{ steps.prepare_docker_tags.outputs.tags }}
