--- a/.github/workflows/build_publish_cli_image.yml
+++ b/.github/workflows/build_publish_cli_image.yml
@@ -53,6 +53,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./
-          file: ./Dockerfile.cli
+          file: ./Dockerfile-cli
           push: true
           tags: ${{ steps.prepare_docker_tags.outputs.tags }}
