Copy local repo instead of cloning
We want to be able to push images from our feature branches. Cloning the master branch in the Dockerfile discards any changes on the feature branch...

--- a/Dockerfile-cli
+++ b/Dockerfile-cli
@@ -9,8 +9,8 @@ RUN apt-get update \
     && apt-get clean
 
 WORKDIR /app
+COPY . /app/
 
-RUN git clone -b master https://github.com/Clinical-Genomics/cg.git /app
-RUN pip install --no-cache-dir .
+RUN pip install .
 
 USER nonroot
