--- a/Dockerfile-cli
+++ b/Dockerfile-cli
@@ -5,7 +5,7 @@ RUN addgroup --system nonroot \
 
 WORKDIR /app
 
-RUN pip install poetry
+RUN pip install --no-cache-dir poetry
 
 COPY pyproject.toml poetry.lock /app/
 
