--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -18,23 +18,15 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install build tools
-        run: >-
-          python -m
-          pip install
-          wheel
-          twine
-          --user
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
 
-      - name: Build a binary wheel and a source tarball
-        run: >-
-          python
-          setup.py
-          sdist
-          bdist_wheel
+      - name: Install dependencies
+        run: poetry install --no-dev --no-interaction
 
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
+      - name: Build package
+        run: poetry build -f wheel --no-interaction
+
+      - name: Publish package to PyPI
+        run: poetry publish -n --build --username __token__ --password ${{ secrets.pypi_password }}
