--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -22,18 +22,21 @@ jobs:
       - name: Install and Upgrade Pip
         run: |
           python -m pip install --upgrade pip
-          echo ${{ matrix.python-version}}
+          echo ${{ matrix.python-version }}
           pip --version
+
+      - name: Install Poetry
+        run: |
+          pip install poetry
 
       - name: Cache Dependencies
         uses: actions/cache@v3
-        id: cache
         with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ env.pythonLocation }}-${{ hashFiles('**/requirements*.txt') }}
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-
 
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          pip install -r requirements.txt -r requirements-dev.txt
-          pip check
+          poetry install --no-interaction
+          poetry check
