Use pip to install poetry

--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install Poetry
-        run: pip install --upgrade poetry
+        run: pip install poetry
 
       - name: Cache dependencies
         uses: actions/cache@v3
