--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -19,14 +19,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install Poetry
-        run: |
-          pip install poetry
+        run: pip install poetry
 
-      - name: Install dependencies
-        run: poetry install --no-dev --no-interaction
-
-      - name: Build package
-        run: poetry build -f wheel --no-interaction
-
-      - name: Publish distribution 📦 to PyPI
+      - name: Build and publish distribution 📦 to PyPI
         run: poetry publish -n --build --username __token__ --password ${{ secrets.pypi_password }}
