--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -20,14 +20,13 @@ jobs:
           python-version: ${{ matrix.python-version}}
 
       - name: Install Poetry
-        run: |
-          pip install poetry
+        run: pip install poetry
 
       - name: Cache Dependencies
         uses: actions/cache@v3
         with:
           path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: poetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
         run: |
