--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -30,5 +30,6 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          poetry config virtualenvs.create false
           poetry install --no-interaction
           poetry check
