--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version}}
 
-      - name: Install Poetry
-        run: pip install poetry
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: false
 
       - name: Cache Dependencies
         uses: actions/cache@v3
