Ensure bump action will update version

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,6 @@ tag = True
 tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version} [skip ci]
 
-[bumpversion:file:setup.py]
+[bumpversion:file:pyproject.toml]
 
 [bumpversion:file:cg/__init__.py]
