--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -31,14 +31,12 @@ jobs:
           key: poetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
-        run: |
-          poetry config virtualenvs.create false
-          poetry install --no-interaction
+        run: poetry install --no-interaction
 
       - name: Test with pytest & Coveralls
         run: |
-          poetry run pytest --cov=cg/
-          poetry run coveralls
+          pytest --cov=cg/
+          coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
