--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -31,6 +31,7 @@ jobs:
           key: poetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           poetry config virtualenvs.create false
           poetry install --no-interaction
