--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -31,6 +31,7 @@ jobs:
           key: poetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
 
       - name: Test with pytest & Coveralls
