Add missing step id:s

--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Cache Dependencies
         uses: actions/cache@v3
+        id: cache
         with:
           path: ~/.cache/pypoetry
           key: poetry-${{ hashFiles('**/poetry.lock') }}
