--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Cache dependencies
         uses: actions/cache@v3
+        id: cache
         with:
           path: ~/.cache/pypoetry
           key: poetry-${{ hashFiles('**/poetry.lock') }}
