--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -18,23 +18,16 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install build tools
-        run: >-
-          python -m
-          pip install
-          wheel
-          twine
-          --user
-
-      - name: Build a binary wheel and a source tarball
-        run: >-
-          python
-          setup.py
-          sdist
-          bdist_wheel
-
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
         with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
+          virtualenvs-create: false
+
+      - name: Build and Publish Distribution to PyPI 📦
+        env:
+          PYPI_USERNAME: __token__
+          PYPI_PASSWORD: ${{ secrets.pypi_password }}
+        run: |
+          poetry publish --no-interaction --build \
+            --username $PYPI_USERNAME \
+            --password $PYPI_PASSWORD
