--- a/.github/workflows/installations.yml
+++ b/.github/workflows/installations.yml
@@ -19,21 +19,20 @@ jobs:
         with:
           python-version: ${{ matrix.python-version}}
 
-      - name: Install and Upgrade Pip
-        run: |
-          python -m pip install --upgrade pip
-          echo ${{ matrix.python-version}}
-          pip --version
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: false
 
       - name: Cache Dependencies
         uses: actions/cache@v3
         id: cache
         with:
           path: ${{ env.pythonLocation }}
-          key: ${{ env.pythonLocation }}-${{ hashFiles('**/requirements*.txt') }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          pip install -r requirements.txt -r requirements-dev.txt
-          pip check
+          poetry install --no-interaction
+          poetry check
