--- a/Dockerfile-cli
+++ b/Dockerfile-cli
@@ -4,8 +4,14 @@ RUN addgroup --system nonroot \
     && adduser --system --ingroup nonroot nonroot
 
 WORKDIR /app
-COPY . /app/
 
-RUN pip install .
+RUN pip install --no-cache-dir poetry
+
+COPY pyproject.toml poetry.lock /app/
+
+RUN poetry config virtualenvs.create false \
+    && poetry install --no-dev --no-interaction --no-ansi
+
+COPY . /app/
 
 USER nonroot
