--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,19 @@ repository = "https://github.com/Clinical-Genomics/cg"
 classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: Implementation :: CPython"
+  "Programming Language :: Python :: Implementation :: CPython",
 ]
-
+include = [
+  "README.md",
+  "cg/**/*",
+  "cg/server/templates/**/*",
+  "cg/server/invoices/templates/invoices/**/*",
+  "cg/meta/report/templates/**/*",
+  "cg/apps/invoice/templates/**/*",
+  "cg/resources/**/*",
+  "tests/**/*",
+]
+exclude = ["**/__pycache__", "**/*.py[co]"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
