--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,8 @@ classifiers = [
 include = [
   "README.md",
   "cg/**/*",
-  "cg/server/templates/**/*",
-  "cg/server/invoices/templates/invoices/**/*",
-  "cg/meta/report/templates/**/*",
-  "cg/apps/invoice/templates/**/*",
-  "cg/resources/**/*",
-  "tests/**/*",
+  "tests/**/*"
 ]
-exclude = ["**/__pycache__", "**/*.py[co]"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
