--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,87 +13,73 @@ repository = "https://github.com/Clinical-Genomics/cg"
 classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: Implementation :: CPython"
+  "Programming Language :: Python :: Implementation :: CPython",
 ]
-
-[package]
 include = [
-    "README.md",
-    "cg/**/*",
-    "cg/server/templates/**/*",
-    "cg/server/invoices/templates/invoices/**/*",
-    "cg/meta/report/templates/**/*",
-    "cg/apps/invoice/templates/**/*",
-    "cg/resources/**/*",
-    "tests/**/*",
-]
-exclude = [
-    "**/__pycache__",
-    "**/*.py[co]",
+  "README.md",
+  "cg/**/*",
+  "tests/**/*"
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 
 # Database
-alembic = "1.12.0"
-SQLAlchemy = "2.0.22"
-PyMySQL = "1.1.0"
+alembic = "*"
+SQLAlchemy = "*"
+PyMySQL = "*"
 
 # CLI
-click = "8.1.7"
+click = "*"
 
 # Server
-blinker = "1.6.3"
-CacheControl = "0.13.1"
-Flask-Admin = "1.6.1"
-Flask-CORS = "4.0.0"
-Flask-Dance = "7.0.0"
-Flask = "3.0.0"
-Flask-WTF = "1.2.1"
-WTForms = "3.0.0"
-google-auth = "2.23.2"
-gunicorn = "21.2.0"
-requests = "2.31.0"
-sendmail-container = "0.2.0"
-werkzeug = "3.0.0"
+blinker = "*"
+CacheControl = "*"
+Flask-Admin = "*"
+Flask-CORS = "*"
+Flask-Dance = "*"
+Flask = "*"
+Flask-WTF = "*"
+WTForms = "*"
+google-auth = "*"
+gunicorn = "*"
+requests = "*"
+sendmail-container = "*"
+werkzeug = "*"
 
 # Utils
-cachetools = "5.3.1"
-coloredlogs = "15.0.1"
-Jinja2 = "3.1.2"
-lxml = "4.9.3"
-marshmallow = "3.20.1"
-MarkupSafe = "2.1.3"
-openpyxl = "3.0.10"
-packaging = "23.2"
-pandas = "2.1.1"
-paramiko = "3.3.1"
-petname = "2.6"
-psutil = "5.9.5"
-pydantic = "2.4.2"
-python-dateutil = "2.8.2"
-PyYAML = "6.0.1"
-tabulate = "0.9.0"
-typing_extensions = "4.8.0"
-urllib3 = "2.0.6"
+cachetools = "*"
+coloredlogs = "*"
+Jinja2 = "*"
+lxml = "*"
+marshmallow = "*"
+MarkupSafe = "*"
+openpyxl = "*"
+packaging = "*"
+pandas = "*"
+paramiko = "*"
+petname = "*"
+psutil = "*"
+pydantic = "*"
+python-dateutil = "*"
+PyYAML = "*"
+tabulate = "*"
+typing_extensions = "*"
+urllib3 = "*"
 
 # Apps
-genologics = "1.0.0"
-housekeeper = "4.10.5"
+genologics = "*"
+housekeeper = "*"
 
 
 [tool.poetry.dev-dependencies]
-coveralls = "3.3.1"
-mock = "5.1.0"
-pre-commit = "3.4.0"
-pytest-cov = "4.1.0"
-pytest-mock = "3.11.1"
-pytest = "7.4.2"
-ruff = "0.0.292"
-
-[build]
-include = ["**/*"]
+coveralls = "*"
+mock = "*"
+pre-commit = "*"
+pytest-cov = "*"
+pytest-mock = "*"
+pytest = "*"
+ruff = "*"
 
 [tool.poetry.scripts]
 cg = "cg.cli.base:base"
