--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,4 +96,4 @@ profile = "black"
 line-length = 100
 target-version = "py311"
 exclude = ["alembic"]
-ignore = ["E501", "F401"]
+ignore = ["E501"]
