--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v3.3.0      
         with:
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.BUMPVERSION_TOKEN }}
           fetch-depth: 0
           persist-credentials: false 
       
