Fix test execution

--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   tests-coverage:
-    runs-on: ubuntu-latest
+    runs-on: macos-13
 
     steps:
       - name: Checkout Repository
@@ -37,7 +37,7 @@ jobs:
 
       - name: Test with pytest & Coveralls
         run: |
-          pytest --cov=cg/
+          pytest -n auto --cov=cg/
           coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
