--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Test with pytest & Coveralls
         run: |
-          pytest --cov=cg/
+          pytest -n auto --cov=cg/
           coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
