--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -32,7 +32,7 @@ jobs:
 #          key: ${{ env.pythonLocation }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+#        if: steps.cache.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
 
       - name: Test with pytest & Coveralls
