--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -24,15 +24,15 @@ jobs:
         with:
           virtualenvs-create: false
 
-#      - name: Cache dependencies
-#        uses: actions/cache@v3
-#        id: cache
-#        with:
-#          path: ${{ env.pythonLocation }}
-#          key: ${{ env.pythonLocation }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
-#        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
 
       - name: Test with pytest & Coveralls
