--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ werkzeug = "*"
 # Utils
 cachetools = "*"
 coloredlogs = "*"
-Jinja2 = "*"
+Jinja2 = ">=3.1.3"
 lxml = "*"
 marshmallow = "*"
 MarkupSafe = "*"
